testsuite/tests/annotations/should_fail/annfail07.stderr

annfail07.hs:9:17: error: [GHC-83865]
    • Couldn't match expected type ‘[a0]’ with actual type ‘Bool’
    • In the first argument of ‘head’, namely ‘True’
      In the annotation: {-# ANN f (head True) #-}
